# TomskSoftPractice

./: CMakeLists.txt  Online_Converter.pro  README.md  Resource.qrc  about.cpp  about.h  combo_box.cpp  combo_box.h  converter.cpp  converter.h  converter.ui  currency.cpp  currency.h  load_screen.cpp  load_screen.h  loadscreen.cpp  loadscreen.h  loadscreen.ui  main.cpp  main_window.cpp  main_window.h  parse.cpp  parse.h  request_api.cpp  request_api.h  request_manager.cpp  request_manager.h  resource.h  save_data.cpp  save_data.h  widget.cpp  widget.h
headers/: about.h  combo_box.h  currency.h  load_screen.h  main_window.h  request_manager.h  resource.h  save_data.h
source/: about.cpp  combo_box.cpp  currency.cpp  load_screen.cpp  main.cpp  main_window.cpp  request_manager.cpp  save_data.cpp
